--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-spring.datasource.url = jdbc:mysql://localhost:3306/portfolio_personal?useSSL=false&serverTimeZone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url = jdbc:mysql://uts692clkag7jbvt:uYxdhPx5yFEDiFEPwG1z@b8gycf2gflimojtd6rgd-mysql.services.clever-cloud.com:3306/b8gycf2gflimojtd6rgd
+spring.datasource.username=uts692clkag7jbvt
+spring.datasource.password=uYxdhPx5yFEDiFEPwG1z
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
